@@ -1,4 +1,4 @@
 DIST pysdm-0.4.1.tar.gz 114377 RMD160 57cf8a030265de7cf7bb1b5bddf76d00b465db07 SHA1 f364a95e86d30d4c2bfd487bce59a1d2fbdd6cb3 SHA256 0d92c781dfd9abab8b2ff037ef7fb7e41cb3b1439b3e984aadb3572d82173e32
-EBUILD pysdm-0.4.1-r1.ebuild 689 RMD160 8422bd68de9b0aeeb94beefa05edf3f3b6dcd747 SHA1 f7d21d58691d71d7d8ae05c00d3e88b8eab33d28 SHA256 25aab74bc333e4a82a90ea5a3c55feb7d509fb74f06545247650a13698897f3a
-MISC ChangeLog 252 RMD160 9a5e339c5f1180794278857b6063cf0f5e3c6193 SHA1 d646d95d50a7ed5d9654b7ddb0257bda5df0e92e SHA256 89eb539d5889fcbcce59c2ee68ecdfdc6678d94dab557e607379497bd4b157ff
+EBUILD pysdm-0.4.1.ebuild 692 RMD160 1e2d9186737cc6477b94f461bcebda3627687e58 SHA1 85c1a77f3c44e5424f111b91cf45d4881c106d35 SHA256 e5c84cd7a7b27ee9f2c3674644b265907b4ac0d2223f5c09a5fc51b71905cc98
+MISC ChangeLog 399 RMD160 44f36067f3325652ee3853c15333226055e42d95 SHA1 667809d114b156a2e94f6e6a45b68036579a0971 SHA256 e42e250acda0f194e1358d9d1d0f3440c7ec300ad8a88df32add3ea9fd39a782
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
