@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  +pysdm-0.4.1.ebuild, -pysdm-0.4.1-r1.ebuild:
+  Use normal version + some readability
+
   07 Jul 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
   +pysdm-0.4.1-r1.ebuild, +metadata.xml:
   New ebuild for bug #217027
